# BayesShip

./: .buildinfo  .gitignore  CMakeLists.txt  FisherProposal_8cpp.html  FisherProposal_8cpp__incl.dot  GMMProposal_8cpp.html  GMMProposal_8cpp__incl.dot  KDEProposal_8cpp.html  KDEProposal_8cpp__incl.dot  README.md  ThreadPool_8h.html  ThreadPool_8h__dep__incl.dot  ThreadPool_8h__incl.dot  ThreadPool_8h_source.html  annotated.html  autocorrelationUtilities_8cpp.html  autocorrelationUtilities_8cpp__incl.dot  autocorrelationUtilities_8h.html  autocorrelationUtilities_8h__dep__incl.dot  autocorrelationUtilities_8h__incl.dot  autocorrelationUtilities_8h_source.html  bayesshipSampler_8cpp.html  bayesshipSampler_8cpp__incl.dot  bayesshipSampler_8h.html  bayesshipSampler_8h__dep__incl.dot  bayesshipSampler_8h__incl.dot  bayesshipSampler_8h_source.html  blockDifferentialEvolutionProposal_8cpp.html  blockDifferentialEvolutionProposal_8cpp__incl.dot  blockFisherProposal_8cpp.html  blockFisherProposal_8cpp__incl.dot  classbayesship_1_1DefaultComp-members.html  classbayesship_1_1DefaultComp.html  classbayesship_1_1GMMProposal-members.html  classbayesship_1_1GMMProposal.html  classbayesship_1_1GMMProposal__coll__graph.dot  classbayesship_1_1GMMProposal__inherit__graph.dot  classbayesship_1_1KDEProposal-members.html  classbayesship_1_1KDEProposal.html  classbayesship_1_1KDEProposal__coll__graph.dot  (+194 more)
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/api/: ThreadPool.rst.txt  dataUtilities.rst.txt  proposalFunctions.rst.txt  utilities.rst.txt
_sources/installation/: installation.md.txt
algorithm_tests/: CMakeLists.txt  DiffEvTests.cpp  GMMTests.cpp  KDETests.cpp  standardTests.cpp  threadPoolTests.cpp
algorithm_tests/python/: compare_DiffEv_distributions.py  compare_GMM_distributions.py  compare_KDE_distributions.py  create_DiffEv_test_data.py  create_GMM_test_data.py  create_KDE_test_data.py  gaussianLikelihoodTestPost.py  multiModalTestPost.py  transdimensional_bilby_comparison.py  transdimensional_data_creation.py  transdimensional_post.ipynb
api/: ThreadPool.html  autocorrelationUtilities.html  bayesshipSampler.html  dataUtilities.html  index.html  proposalFunctions.html  standardPriors.html  utilities.html
docker/: Dockerfile  runscript.sh
docs/: CMakeLists.txt  Doxyfile.in  README.dox.in  conf.py  index.rst
docs/api/: autocorrelationUtilities.rst  bayesshipSampler.rst  generate_rst_files.py  standardPriors.rst
docs_archive/: Doxyfile.in  README.dox.in
examples/: CMakeLists.txt
examples/bimodal2D/: CMakeLists.txt  README.md
examples/bimodal2D/python/: multiModalTestPost.py
examples/bimodal2D/src/: bimodal2D.cpp
examples/chebyshevTransdimensional/: CMakeLists.txt  README.md
examples/chebyshevTransdimensional/data/2_3_1_100_1/: clean_data_transdimensional.csv  full_data_transdimensional.csv
examples/chebyshevTransdimensional/python/: transdimensional_data_creation.py  transdimensional_post.ipynb
examples/chebyshevTransdimensional/src/: chebyshevTransdimensional.cpp
examples/gaussian1D/: CMakeLists.txt  README.md
examples/gaussian1D/python/: gaussian1D.py  gaussianLikelihoodTestPost.py
examples/gaussian1D/src/: gaussian1D.cpp
examples/rosenbock/: CMakeLists.txt  README.md
examples/rosenbock/python/: rosenbock.py  rosenbockNested.py  rosenbockPostAnalysis.ipynb
examples/rosenbock/src/: rosenbock.cpp
extraDocs/: jupyterDocker.html
include/bayesship/: BayesShipConfig.h.in  ThreadPool.h  autocorrelationUtilities.h  bayesshipSampler.h  dataUtilities.h  proposalFunctions.h  standardPriors.h  utilities.h
installation/: installation.html
python/: CMakeLists.txt  README.md.in  setup.py.in
python/bayesshippy/: CMakeLists.txt  bayesshipSamplerpy.i  dataUtilitiespy.i  mcmcRoutines.py  utilitiespy.i
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  (+48 more)
src/: CMakeLists.txt  FisherProposal.cpp  GMMProposal.cpp  KDEProposal.cpp  autocorrelationUtilities.cpp  bayesshipSampler.cpp  bayesshipSampler.i  bayesshippy.i  blockDifferentialEvolutionProposal.cpp  blockFisherProposal.cpp  dataUtilities.cpp  differentialEvolutionProposal.cpp  gaussianProposal.cpp  gibbsFisherProposal.cpp  jointKDEProposal.cpp  randomLayerProposalRJ.cpp  sequentialLayerProposalRJ.cpp  standardPriors.cpp  utilities.cpp
tutorials/: contributing.html  index.html  jupyterDocker.html
unit_tests/: CMakeLists.txt  ThreadPool_test.cpp  bayesshipSampler_test.cpp  tests.cpp
